--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,10 @@ header {
     justify-content: space-around;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -139,6 +143,7 @@ nav>i {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../images/background_container.jpg");
+    background-position: center;
     color: white;
 }
 
@@ -232,6 +237,7 @@ nav>i {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../images/background_container_2.jpg");
+    background-position: center;
     color: white;
 }
 
@@ -276,6 +282,7 @@ nav>i {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../images/background_container_3.jpg");
+    background-position: center;
     color: white;
 }
 
@@ -302,6 +309,7 @@ nav>i {
     display: flex;
     flex-direction: column;
     background-image: url("../images/background_container_4.jpg");
+    background-position: center;
     background-size: cover;
     color: white;
     padding: 2rem;
@@ -400,12 +408,15 @@ nav>i {
     width: 80%;
 }
 
-.row {
+.intervenants {
     width: 100%;
+    flex-wrap: wrap;
 }
 
-.col {
-    width: 50%;
+.intervenants>img {
+    width: 65%;
+    margin: 1rem;
+    border-radius: 65px;
 }
 
 
@@ -413,6 +424,7 @@ nav>i {
 
 .container_faq {
     background-image: url("../images/background_container_5.jpg");
+    background-position: center;
     background-size: cover;
     color : white;
     border-bottom: 10px solid #5370ac;
@@ -652,6 +664,10 @@ footer>div>div>ul>li>i {
     .container_jurivision>div>p {
         width: 100%;
         margin: 0;
+    }
+
+    .intervenants>img {
+        border-radius: 15px;
     }
 
     #actualites {
